<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff" >

        <!-- Header  Starts -->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ticnamelogo"
            android:orientation="horizontal"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >
        </LinearLayout>
        <!-- Header Ends -->


        <!-- Registration Form -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- name text field -->

            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:hint="@string/name"
                android:singleLine="true" />

            <!-- Username text field -->

            <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:hint="@string/username"
                android:singleLine="true" />

            <!-- Password textfield -->

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true" />

            <!-- Re-type Password textfield -->

            <EditText
                android:id="@+id/repassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/repassword"
                android:inputType="textPassword"
                android:singleLine="true" />

            <!-- Email textfield -->

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <!-- Country textfield -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/country" />

            <Spinner
                android:id="@+id/countrySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/countrySpinnerArray"
                android:gravity="center_horizontal"
                android:prompt="@string/countrySpinner" />

            <!-- Register Button -->

            <Button
                android:id="@+id/register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/buttonback"
                android:onClick="registerAccount"
                android:text="@string/register" />
        </LinearLayout>
        <!-- Registration Form Ends -->
    </RelativeLayout>

</ScrollView>