<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/streetMapLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true" >

    <Button
        android:id="@+id/locationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/scheduleButton"
        android:layout_alignBottom="@+id/scheduleButton"
        android:layout_toLeftOf="@+id/scheduleButton"
        android:background="@drawable/smallbuttonback"
        android:onClick="onAddButtonClick"
        android:text="@string/customLocation" />

    <Button
        android:id="@+id/scheduleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/smallbuttonback"
        android:onClick="onScheduleButtonClick"
        android:text="@string/schedule" />

    <Button
        android:id="@+id/manageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/scheduleButton"
        android:layout_marginTop="14dp"
        android:background="@drawable/smallbuttonback"
        android:onClick="onManageButtonClick"
        android:text="@string/manage" />

</RelativeLayout>